<resources>
    <string name="app_name">Source</string>
    <string name="list_of_examples">List Of Examples</string>
    <string name="success">Success</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="downloading">Downloading</string>
    <string name="open_file">Open File</string>
    <string name="no_uri">No URI!!</string>
    <string name="file_already_exists">File already exists</string>

    <!--Exo player-->
    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <string name="media_url_mp3_v2"> https://storage.googleapis.com/exoplayer-test-media-0/play.mp3</string> <!--from code lab-->
    <!-- Big Buck Bunny video provided by the Blender Foundation.
    (c) copyright 2008, Blender Foundation / www.bigbuckbunny.org -->
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="hello">Hello</string>
    <string name="close">Close</string>
    <string name="type_your_pref_key">Type Your Pref Key</string>
    <string name="type_the_value_to_save">Type the value to save</string>
    <string name="save">Save</string>
    <string name="type_your_key_to_read">Type your key to read</string>
    <string name="read">Read</string>
    <string name="state_flow">State Flow</string>
    <string name="flow_demo">Flow Demo</string>
    <string name="jetpack_data_store_demo">Jetpack Data Store Demo</string>
    <string name="flow">Flow</string>
    <string name="shared_flow">Shared Flow</string>
    <!--Exo player-->

    <!--Paging Library 3-->
    <string name="loading">Loading</string>
    <string name="language">Language: %s</string>
    <string name="search_hint">GitHub Repository</string>
    <string name="work_in_progress">Work In Progress</string>
    <string name="no_results">No results 😓</string>
    <string name="unknown">\?</string>
    <string name="retry">Retry</string>
    <string name="paging_library_example">Paging Library Example</string>
    <!--Paging Library 3-->

    <!-- Work Manager Sample -->
    <string name="blur_title">Select Blur Amount</string>
    <string name="select_image">Select Image</string>
    <string name="go">Go</string>
    <string name="see_file">See File</string>
    <string name="description_image">The image to blur and save.</string>
    <string name="blur_lv_1">A little blurred</string>
    <string name="blur_lv_2">More blurred</string>
    <string name="blur_lv_3">The most blurred</string>
    <string name="cancel_work">Cancel Work</string>
    <string name="set_permissions_in_settings">Go to Settings -> Apps and Notifications ->
        WorkManager Demo -> App Permissions and grant access to Storage.</string>
    <string name="work_manager_sample">Work Manager Sample</string>
    <!-- Work Manager Sample -->

</resources>